--- a/src/main/resources/templates/HomePage.html
+++ b/src/main/resources/templates/HomePage.html
@@ -19,9 +19,7 @@
 					<div class="col-md-6">
 						<div class="card">
 							<h3 class="card-title">Today Sales</h3>
-							<div class="card-body">Hey there, I am a very simple card.
-								I am good at containing small bits of information. I am quite
-								convenient because I require little markup to use effectively.</div>
+							<div class="card-body">Coming soon,We are working on this feature.</div>
 							<div class="card-footer">
 								<a class="btn btn-primary" href="#">Link</a>
 							</div>
@@ -30,9 +28,7 @@
 					<div class="col-md-6">
 						<div class="card">
 							<h3 class="card-title">Today Payments</h3>
-							<div class="card-body">Hey there, I am a very simple card.
-								I am good at containing small bits of information. I am quite
-								convenient because I require little markup to use effectively.</div>
+							<div class="card-body">Coming soon,We are working on this feature.</div>
 							<div class="card-footer">
 								<a class="btn btn-primary" href="#">Link</a>
 							</div>
@@ -44,9 +40,7 @@
 					<div class="col-md-6">
 						<div class="card">
 							<h3 class="card-title">Items Notifications</h3>
-							<div class="card-body">Hey there, I am a very simple card.
-								I am good at containing small bits of information. I am quite
-								convenient because I require little markup to use effectively.</div>
+							<div class="card-body">Coming soon,We are working on this feature.</div>
 							<div class="card-footer">
 								<a class="btn btn-primary" href="#">Link</a>
 							</div>
@@ -55,9 +49,7 @@
 					<div class="col-md-6">
 						<div class="card">
 							<h3 class="card-title">Card Title</h3>
-							<div class="card-body">Hey there, I am a very simple card.
-								I am good at containing small bits of information. I am quite
-								convenient because I require little markup to use effectively.</div>
+							<div class="card-body">Coming soon,We are working on this feature.</div>
 							<div class="card-footer">
 								<a class="btn btn-primary" href="#">Link</a>
 							</div>
