--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -16,7 +16,8 @@
 		<h1>
 			<i class="fa fa-exclamation-circle"></i> OUPS OUPS OUPS
 		</h1>
-		<p>Some error appear when processing your request.</p>
+		<h2>Gasmyr Mougang is working on this feature right now. Please come back later</h2>
+		<p>gasmyrmougang@gmail.com</p>
 
 		<p th:text="${errorMessage}">No error details available</p>
 		<p>
