--- a/src/main/resources/templates/HomePage.html
+++ b/src/main/resources/templates/HomePage.html
@@ -21,7 +21,7 @@
 							<h3 class="card-title">Today Sales</h3>
 							<div class="card-body">Coming soon,We are working on this feature.</div>
 							<div class="card-footer">
-								<a class="btn btn-primary" href="#">Link</a>
+								<a class="btn btn-primary" href="#">refresh</a>
 							</div>
 						</div>
 					</div>
@@ -30,7 +30,7 @@
 							<h3 class="card-title">Today Payments</h3>
 							<div class="card-body">Coming soon,We are working on this feature.</div>
 							<div class="card-footer">
-								<a class="btn btn-primary" href="#">Link</a>
+								<a class="btn btn-primary" href="#">refresh</a>
 							</div>
 						</div>
 					</div>
@@ -42,16 +42,16 @@
 							<h3 class="card-title">Items Notifications</h3>
 							<div class="card-body">Coming soon,We are working on this feature.</div>
 							<div class="card-footer">
-								<a class="btn btn-primary" href="#">Link</a>
+								<a class="btn btn-primary" href="#">refresh</a>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-6">
 						<div class="card">
-							<h3 class="card-title">Card Title</h3>
+							<h3 class="card-title">Not paid sales</h3>
 							<div class="card-body">Coming soon,We are working on this feature.</div>
 							<div class="card-footer">
-								<a class="btn btn-primary" href="#">Link</a>
+								<a class="btn btn-primary" href="#">refresh</a>
 							</div>
 						</div>
 					</div>
