--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -14,10 +14,10 @@
 <body>
 	<div class="page-error">
 		<h1>
-			<i class="fa fa-exclamation-circle"></i> OUPS OUPS OUPS
+			<i class="fa fa-exclamation-triangle"></i> OUPS OUPS OUPS
 		</h1>
 		<h2>Gasmyr Mougang is working on this feature right now. Please come back later</h2>
-		<p>gasmyrmougang@gmail.com</p>
+		gasmyrmougang@gmail.com
 
 		<p th:text="${errorMessage}">No error details available</p>
 		<p>
