--- a/src/main/resources/templates/LoginPage.html
+++ b/src/main/resources/templates/LoginPage.html
@@ -21,6 +21,9 @@
 		<div class="logo">
 			<h1>Inventory Management System</h1>
 		</div>
+		<div class="demo">
+		   <strong>Username: admin</strong>&nbsp;&nbsp;&nbsp;<strong>Password: admin</strong><br></br>
+		</div>
 		<div class="login-box loginBox">
 			<p th:if="${error}" class="error">Wrong user name or password</p>
 			<form name="f" class="login-form" th:object="${user}" method="post"
